--- a/BraniacLMS/mainapp/templates/mainapp/news.html
+++ b/BraniacLMS/mainapp/templates/mainapp/news.html
@@ -1,99 +1,63 @@
-
-12 Изменить  mainapp/templates/mainapp/courses_list.html
 {% extends 'base.html' %}
 
 {% block content %}
 
-  <div class="row justify-content-center mt-3">
+<div class="row">
 
+  <div class="col-lg-8">
 
-    <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-      <a href="#">
-        <img src="/static/img/course001.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title text-center">Web Python</h5>
-        </div>
-      </a>
+    {% for i in range %}
+    <div class="card my-2">
+      <div class="card-body">
+        <h5 class="card-title">{{ news_title }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">2021-04-29 20-50-26</h6>
+        <p class="card-text">{{ news_preview }}</p>
+        <a href="#" class="card-link">Подробнее</a>
+      </div>
     </div>
-
-
-
-    <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-      <a href="#">
-        <img src="/static/img/course002.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title text-center">Web Golang</h5>
-        </div>
-      </a>
-    </div>
-
-
-
-    <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-      <a href="#">
-        <img src="/static/img/course003.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title text-center">Web JavaScript</h5>
-        </div>
-      </a>
-    </div>
-
-
-
-    <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-      <a href="#">
-        <img src="/static/img/course004.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title text-center">Web Java</h5>
-        </div>
-      </a>
-    </div>
-
-
-
-    <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-      <a href="#">
-        <img src="/static/img/course005.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title text-center">Web PHP</h5>
-        </div>
-      </a>
-    </div>
-
-
-
-    <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-      <a href="#">
-        <img src="/static/img/course006.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title text-center">Python AI</h5>
-        </div>
-      </a>
-    </div>
-
-
-
-    <div class="card col-sm-12 col-md-6 col-lg-4 border-0">
-      <a href="#">
-        <img src="/static/img/course007.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title text-center">DevOps</h5>
-        </div>
-      </a>
-    </div>
-
+    {% endfor %}
 
   </div>
-  <div class="row justify-content-center align-items-center mt-3 mb-n3">
-    <nav aria-label="Page navigation example">
-      <ul class="pagination">
-        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">Next</a></li>
-      </ul>
-    </nav>
+
+  <div class="col-lg-4">
+    <div class="card my-2 sticky-top">
+      <div class="card-header">
+        Фильтры
+      </div>
+      <div class="card-body">
+        <form action="">
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Дата от...</span>
+            </div>
+            <input type="date" class="form-control" name="dateFrom">
+          </div>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Дата до...</span>
+            </div>
+            <input type="date" class="form-control" name="dateTo">
+          </div>
+
+          <button type="submit"
+            class="btn btn-primary btn-block">Фильтровать</button>
+        </form>
+      </div>
+    </div>
   </div>
+
+</div>
+
+<div class="row justify-content-center align-items-center mt-3 mb-n3">
+  <nav aria-label="Page navigation example">
+    <ul class="pagination">
+      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
+  </nav>
+</div>
 
 {% endblock content %}
