--- a/BraniacLMS/templates/includes/main_menu.html
+++ b/BraniacLMS/templates/includes/main_menu.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="{% url 'mainapp:index' %}">
       <img src="{% static 'img/logo.png' %}" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -13,10 +13,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="news.html">Новости</a>
+          <a class="nav-link" href="{% url 'mainapp:news' %}">Новости</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="courses_list.html">Курсы</a>
+          <a class="nav-link" href="{% url 'mainapp:courses' %}">Курсы</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="ddProfile" role="button" data-toggle="dropdown"
@@ -36,7 +36,7 @@
           </div>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="contacts.html">Контакты</a>
+          <a class="nav-link" href="{% url 'mainapp:contacts' %}">Контакты</a>
         </li>
       </ul>
       <span><a href="#">🇷🇺</a> <i class="fas fa-grip-lines-vertical"></i> <a href="#">🇬🇧</a></span>
