--- a/BraniacLMS/templates/base.html
+++ b/BraniacLMS/templates/base.html
@@ -18,7 +18,11 @@
   <!-- FontAwesome -->
   <link rel="stylesheet" href="{% static 'css/fontawesome.all.min.css' %}">
 
-  <title>Welcome to Braniac!</title>
+  <title>
+    {% block title %}
+    Welcome to Braniac!
+    {% endblock title %}
+  </title>
 </head>
 
 <body>
@@ -50,7 +54,7 @@
         </p>
         <p>
         <ul class="list-unstyled">
-          <li><a href="{% url 'mainapp:index' %}">Домашняя</a></li>
+          <li><a href="{% url 'mainapp:main_page' %}">Домашняя</a></li>
           <li><a href="{% url 'mainapp:news' %}">Новости</a></li>
           <li><a href="{% url 'mainapp:login' %}">Войти</a></li>
         </ul>
@@ -65,7 +69,8 @@
           <li><a href="#">Положения &amp; Условия</a></li>
           <li><a href="#">Конфиденциальность &amp; Cookies</a></li>
           <li><a href="#">Документация по API</a></li>
-          <li><a href="{% url 'mainapp:doc_site' %}">Документация по сайту</a></li>
+          <li><a href="{% url 'mainapp:doc_site' %}">Документация по сайту</a>
+          </li>
         </ul>
         </p>
       </div>
