--- a/BraniacLMS/templates/includes/main_menu.html
+++ b/BraniacLMS/templates/includes/main_menu.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="{% url 'mainapp:index' %}">
+    <a class="navbar-brand" href="{% url 'mainapp:main_page' %}">
       <img src="{% static 'img/logo.png' %}" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
