--- a/templates/includes/main_menu.html
+++ b/templates/includes/main_menu.html
@@ -39,6 +39,8 @@
             <a class="dropdown-item" href="{% url 'admin:index' %}"
               target="_blank">Административный
               раздел</a>
+            <a class="dropdown-item" href="{% url 'mainapp:log_view' %}"
+              target="_blank">Лог</a>
             {% endif %}
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'authapp:logout' %}">Выход</a>
